- added: framework.on('ready')
- added: framework.on('reconfigure')
- added: framework.injectVersions(url, [rewrite])
- added: controller.image(filename/stream, fnProcess, [headers], [isIM])
- added: controller.subdomain (alias -> req.subdomain)
- added: controller.custom()
- added: controller.clear()
- added: controller.noClear()
- added: FrameworkImage.measure(callback)
- added: FrameworkImage.clean()
- added: FrameworkImage.pipe(stream)
- added: HttpFile.stream([options])
- added: HttpFile.pipe(stream)
- added: HttpFile.measure(callback)
- added: HttpFile.md5(callback)
- added: builders.schema supports join models
- added: Number.parseDate([plus])
- added: supports 400 (Bad request)
- added: dynamic render View and Template from string
- added: simply static files versioning (example: static-version)
- added: utils.distance(lat1, lng1, lat2, lng2)

- updated: FrameworkImage supports stream (image.pipe() and new Image(stream or filename))
- updated: FrameworkImage.command(name, value, [priority])
- updated: builders.schema()
- updated: builders.defaults()
- updated: builders.prepare()
- updated: controller.validate()
- updated: controller.close([end])
- updated: utils.validate()
- updated: utils.httpStatus()
- updated: nosql (extended buffer)
- updated: req.hostname()
- updated: binary

- fixed: subdomain routing [www is automatically removed]
- fixed: controller.database()
- fixed: mail.send()
- fixed: json flag
- fixed: framework.clear(), request.clear()
- fixed: FrameworkMarkdown - parsing of title
- fixed: templates (throwing of exception by the illegal tags)

- improvements: saving of memory
- improvements: utils.js

- documentation (add) HttpFile
- documentation (upd) Configuration
- documentation (upd) How do "views" work?
- documentation (upd) How does authorization work?
- documentation (upd) FrameworkController
- documentation (upd) FrameworkFileSystem
- documentation (upd) FrameworkViews
- documentation (upd) FrameworkController