@@ -47,13 +47,12 @@ var Stream = require('stream');
 
 //reader.pipe(writer);
 //console.log(writer);
-/*
-var image = Image.load('/users/petersirka/desktop/test.jpg', false);
-image.resize(100, 100);
+
+var image = Image.load('/users/petersirka/desktop/header.jpg', false);
+image.resize('20%');
 image.quality(90);
-image.clean();
+image.minify();
 image.save('/users/petersirka/desktop/c.jpg');
-*/
 
 //image.pipe(fs.createWriteStream('/users/petersirka/desktop/c.jpg'));
 
