@@ -19,7 +19,6 @@ IN DEVELOPMENT ======= 1.3.0
 - added: controller.clear()
 - added: controller.noClear()
 - added: FrameworkImage.measure(callback)
-- added: FrameworkImage.clean()
 - added: FrameworkImage.pipe(stream)
 - added: HttpFile.stream([options])
 - added: HttpFile.pipe(stream)
@@ -33,7 +32,9 @@ IN DEVELOPMENT ======= 1.3.0
 - added: utils.distance(lat1, lng1, lat2, lng2)
 
 - updated: FrameworkImage supports stream (image.pipe() and new Image(stream or filename))
+- updated: FrameworkImage.minify()
 - updated: FrameworkImage.command(name, value, [priority])
+- updated: Framework.file();
 - updated: builders.schema()
 - updated: builders.defaults()
 - updated: builders.prepare()
